@@ -7,6 +7,8 @@ Version 6.8.6 - not yet released
   - adjust range and step size of terrain/arrival safety height settings
 * map
   - increase upper limit of the number of waypoint labels displayed
+* Android
+  - fix crash due to Bluetooth LE connect failure
 
 Version 6.8.5 - 2016/06/12
 * calculations
